--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "framer-motion": "^10.15.1",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "3.3.3",
-    "tw-elements": "^1.0.0-beta3",
-    "tw-elements-react": "^1.0.0-alpha1"
+    "tailwindcss": "3.3.3"
   }
 }
